--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
+			<section data-markdown="slides/intro.md"
+				data-separator="^\r?\n<\|\r?\n\r?\n"
+				data-separator-vertical="^\r?\n\|>\r?\n\r?\n"
+				data-separator-notes="^\r?\nNotes:\r?\n"
+			 	data-charset="utf-8">
+			</section>
+			<section data-background-video="slides/img/in-the-absence-intro.mov"></section>
 			<section data-markdown="slides/all.md" 
-				data-separator="^\n<\|\n\n"
-				data-separator-vertical="^\n\|>\n\n"
+				data-separator="^\r?\n<\|\r?\n\r?\n"
+				data-separator-vertical="^\r?\n\|>\r?\n\r?\n"
 				data-separator-notes="^Note:"
 			 	data-charset="utf-8">
 				<!--
