restyled, cut, added 5-dysf

--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
 				data-separator-notes="^\r?\nNotes:\r?\n"
 			 	data-charset="utf-8">
 			</section>
-			<section data-background-video="slides/img/in-the-absence-intro.mov"></section>
-			<section data-markdown="slides/all.md" 
+			<section data-background-video="slides/img/in-the-absence-intro.mov">
+			</section>
+			<section data-markdown="slides/story.md" 
 				data-separator="^\r?\n<\|\r?\n\r?\n"
 				data-separator-vertical="^\r?\n\|>\r?\n\r?\n"
-				data-separator-notes="^Note:"
+				data-separator-notes="^\r?\nNotes:\r?\n"
 			 	data-charset="utf-8">
-				<!--
-				   Note that Windows uses `\r\n` instead of `\n` as its linefeed character.
-				   For a regex that supports all operating systems, use `\r?\n` instead of `\n`.
-			   -->
+			</section>
+			<section data-markdown="slides/5-dysfunctions.md" 
+				data-separator="^\r?\n<\|\r?\n\r?\n"
+				data-separator-vertical="^\r?\n\|>\r?\n\r?\n"
+				data-separator-notes="^\r?\nNotes:\r?\n"
+			 	data-charset="utf-8">
 			</section>
 		</div>
 	</div>
