--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				data-separator-notes="^\r?\nNotes:\r?\n"
 			 	data-charset="utf-8">
 			</section>
-			<section data-background-video="slides/img/in-the-absence-intro.mov">
+			<section data-background-video="slides/img/sewol-in-the-absence-intro.mp4">
 			</section>
 			<section data-markdown="slides/story.md" 
 				data-separator="^\r?\n<\|\r?\n\r?\n"
