added last slide

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 				data-separator-notes="^\r?\nNotes:\r?\n"
 			 	data-charset="utf-8">
 			</section>
+			</section>
+			<section 
+				data-background-size="contain"
+				data-background="slides/img/리본리본-카톡-04.jpg">
+				<!-- one small movement for a miracle -->
+			</section>
 		</div>
 	</div>
 
