--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<section 
 				data-background-size="contain"
 				data-background="slides/img/리본리본-카톡-04.jpg">
-				<!-- one small movement for a miracle -->
+				<aside class="notes">one small movement for a miracle</aside>
 			</section>
 		</div>
 	</div>
